# xorg-drv-vivante

./: xorg-drv-vivante.spec
.gear/: rules
.gear/tags/: list
dri/: Makefile.am  autogen.sh  configure.ac  viv-configure.sh
dri/src/: Makefile.am  Makefile.in  dri.c  drimodule.c  dristruct.h  drm.h  drm_mode.h  protocol-versions.h  xf86dri.c  xf86dri.h
exa/: Makefile.am  autogen.sh  configure.ac  viv-configure.sh
exa/man/: Makefile.am  vivante.man
exa/my-pkgconfig/lib/pkgconfig/: fontsproto.pc  randrproto.pc  renderproto.pc  videoproto.pc  xorg-server.pc  xproto.pc
exa/nbproject/: Package-Default.bash  configurations.xml  project.xml
exa/src/: Makefile.am  Makefile.in
exa/src/vivante_exa/: vivante_composite.c  vivante_copy.c  vivante_exa.c  vivante_exa.h  vivante_pixmap.c  vivante_solid.c
exa/src/vivante_fbdev/: vivante.h  vivante_dri.c  vivante_dri.h  vivante_fbdev_driver.c  xf86dri.h
exa/src/vivante_gal/: vivante_gal.h  vivante_gal_blit.c  vivante_gal_gpu.c  vivante_gal_surface.c  vivante_priv.h
exa/src/vivante_util/: compat-api.h  vivante_common.h  vivante_debug.h
