##############################################################################
#
#    Copyright (c) 2005 - 2012 by Vivante Corp.  All rights reserved.
#
#    The material in this file is confidential and contains trade secrets
#    of Vivante Corporation. This is proprietary information owned by
#    Vivante Corporation. No part of this work may be disclosed,
#    reproduced, copied, transmitted, or used in any way for any purpose,
#    without the express written permission of Vivante Corporation.
#
##############################################################################


AM_CFLAGS = @XORG_CFLAGS@
libdri_la_LTLIBRARIES = libdri.la
libdri_la_LDFLAGS = -module -avoid-version
libdri_ladir = @moduledir@/extensions
libdri_la_SOURCES = \
	dri.c \
	drimodule.c \
	xf86dri.c
